--- a/app/views/consultants/show.html.erb
+++ b/app/views/consultants/show.html.erb
@@ -5,7 +5,7 @@
     <ol>
         <li class="arrow"><a href="./index.html">HOME</a></li>
         <li class="arrow"><a href="./toushikomon-list.html">投資顧問一覧</a></li>
-        <li><strong>アイリンクインベストメント</strong></li>
+        <li><strong><%= @consultant.title %></strong></li>
     </ol>
 </div>
 <!--//pan-navi-->
@@ -20,7 +20,7 @@
         <article id="main" class="clearfix">
 
             <div class="title-bar">
-                <h1>アイリンクインベストメント</h1>
+                <h1><%= @consultant.title %></h1>
             </div>
 
             <div class="toushikomon-data clearfix">
@@ -30,17 +30,17 @@
                         <dt>会社名</dt>
                         <dd>株式会社 アイリンクインベストメント</dd>
                         <dt>サイト名</dt>
-                        <dd>投資顧問のアイリンクインベストメント</dd>
+                        <dd><%= @consultant.site_name %></dd>
                         <dt>URL</dt>
-                        <dd>http://ilinkinvestment.com/</dd>
+                        <dd><%= @consultant.url %></dd>
                         <dt>所在地 </dt>
-                        <dd>福岡市中央区天神2-7-21 天神プライム6F</dd>
+                        <dd><%= @consultant.place %></dd>
                         <dt>責任者名</dt>
-                        <dd>岩本 壮一郎</dd>
+                        <dd><%= @consultant.person %></dd>
                         <dt>電話番号</dt>
-                        <dd>092-404-4444</dd>
+                        <dd><%= @consultant.phone %></dd>
                         <dt>金商</dt>
-                        <dd>福岡財務支局長（金商）第11号</dd>
+                        <dd><%= @consultant.kinsyo %></dd>
                     </dl>
 
                 </div>
@@ -50,69 +50,50 @@
             </div>
 
             <section class="toushikomon-dis">
-                <h2>アイリンクインベストメントの特徴と料金体系</h2>
+                <h2><%= @consultant.title %>の特徴と料金体系</h2>
                 <p>
-                    アイリンク インベストメントは、無料で「銘柄診断」「銘柄予想」を受けることができます。<br />
-                    さらに、無料メルマガも配信しているため使い勝手のいい投資顧問サイトになっています。<br />
-                    サービスと料金体系に関しては、「マネトレ株式コース￥21,000/月」「マネトレ日経225コース￥21,000/月」「ダブルコース￥31,500/月」となっています。
+                    <%= @consultant.contents %>
                 </p>
             </section>
 
             <section class="toushikomon-review">
-                <h2>アイリンクインベストメントの口コミ</h2>
+                <h2><%= @consultant.title %>の口コミ</h2>
 
                 <ul class="toushikomon-review-list-box">
-                    <li class="toushikomon-review-list clearfix">
-                        <dl class="clearfix">
-                            <dt>名無しさん</dt>
-                            <dd>2013/06/18(金) 18:08</dd>
-                        </dl>
-                        <p>アイリンクインベストはなかなか使える</p>
-                    </li>
-                    <li class="toushikomon-review-list clearfix">
-                        <dl class="clearfix">
-                            <dt>名無しさん</dt>
-                            <dd>2013/06/18(金) 18:08</dd>
-                        </dl>
-                        <p>アイリンクインベストはなかなか使える</p>
-                    </li>
-                    <li class="toushikomon-review-list clearfix">
-                        <dl class="clearfix">
-                            <dt>名無しさん</dt>
-                            <dd>2013/06/18(金) 18:08</dd>
-                        </dl>
-                        <p>アイリンクインベストはなかなか使える</p>
-                    </li>
-                    <li class="toushikomon-review-list clearfix">
-                        <dl class="clearfix">
-                            <dt>名無しさん</dt>
-                            <dd>2013/06/18(金) 18:08</dd>
-                        </dl>
-                        <p>アイリンクインベストはなかなか使える</p>
-                    </li>
-                    <li class="toushikomon-review-list clearfix">
-                        <dl class="clearfix">
-                            <dt>名無しさん</dt>
-                            <dd>2013/06/18(金) 18:08</dd>
-                        </dl>
-                        <p>アイリンクインベストはなかなか使える</p>
-                    </li>
+                    <%= @consultant.comments.each do |comment| %>
+                        <li class="toushikomon-review-list clearfix">
+                            <dl class="clearfix">
+                                <dt><%= comment.sender %></dt>
+                                <dd><%= complete_time(comment.created_at) %></dd>
+                            </dl>
+                            <p><%= comment.contents %></p>
+                        </li>
+                    <% end %>
                 </ul>
+
+
+         
+
+
 
                 <div class="from-write">
                     <h3>口コミを書き込みする</h3>
                     <div class="clearfix">
-                        <form action="">
+                        <% @comment = Comment.new %>
+                        <%= form_for(@comment) do |f| %>
                             <dl class="clearfix">
                                 <dt><label for="form-stock-name">お名前</label></dt>
-                                <dd><input type="text" name="" id="form-stock-name" /></dd>
+                                <%= f.hidden_field :consultant_id, value: @consultant.id %>
+                                <dd><%= f.text_field :sender, class: "field_wide", id: "form-stock-name"  %></dd>
                             </dl>
-                            <p><textarea name=""></textarea></p>
+                            <p><%= f.text_area :contents, rows: "4", class: "field_wide" %></p>
                             <ul>
                                 <li><input type="checkbox" /><a href="./kiyaku.html">利用規約</a>に同意して書き込む</li>
-                                <li><input type="image" src="./img/button-form-write.png" value="書き込み" alt="書き込み" onMouseOver="this.src='./img/button-form-write-on.png'" onMouseOut="this.src='./img/button-form-write.png'" /></li>
+                                <li>
+                                    <%= f.submit "投稿", class: "btn_primary" %>
+                                </li>
                             </ul>
-                        </form>
+                        <% end %>
                     </div>
                 </div>
 
@@ -125,56 +106,6 @@
 
 
 
-
-
-
-
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @consultant.title %>
-</p>
-
-<p>
-  <b>Category:</b>
-  <%= @consultant.category %>
-</p>
-
-<p>
-  <b>Contents:</b>
-  <%= @consultant.contents %>
-</p>
-
-<p>
-  <b>Site name:</b>
-  <%= @consultant.site_name %>
-</p>
-
-<p>
-  <b>Url:</b>
-  <%= @consultant.url %>
-</p>
-
-<p>
-  <b>Place:</b>
-  <%= @consultant.place %>
-</p>
-
-<p>
-  <b>Person:</b>
-  <%= @consultant.person %>
-</p>
-
-<p>
-  <b>Phone:</b>
-  <%= @consultant.phone %>
-</p>
-
-<p>
-  <b>Kinsyo:</b>
-  <%= @consultant.kinsyo %>
-</p>
 
 <p>
   <b>Rate:</b>
