--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,10 +1,10 @@
 <nav id="g-navi">
 	<ul class="clearfix">
-		<li class="g-navi-1"><a href="./index.html">注目銘柄</a></li>
+		<li class="g-navi-1"><%= link_to "注目銘柄", root_path %></li>
 		<li class="g-navi-2"><%= link_to "仕手株速報", pieces_path %></li>
 		<li class="g-navi-3"><%= link_to "株価予測", boards_path %></li>
 		<li class="g-navi-4"><%= link_to "投資顧問会社口コミ", toushikomon_boards_path %></li>
-		<li class="g-navi-5"><a href="./blog-rank-kabu.html">株ブログランキング</a></li>
+		<li class="g-navi-5"><%= link_to "株ブログランキング", blogs_path(stock: true) %></li>
 		<li class="g-navi-6"><%= link_to "投資家ブログランキング", blogs_path %></li>
 		<li class="g-navi-7">
 			<%= link_to "超初心者", beginners_path %>
