--- a/app/views/layouts/stock.html.erb
+++ b/app/views/layouts/stock.html.erb
@@ -20,7 +20,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body id="index">
+<body id="stock-list">
 	<!--wrapper-->
 	<div id="wrapper" class="clearfix">
 
