--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,34 +1,6 @@
-<%= form_for@blog, html: {multipart: true} do |f| %>
-  <div class="field">
-    ブログのタイトル<br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    ブログのurl<br />
-    <%= f.text_field :url %>
-  </div>
-  <div class="field">
-    ブログのrss<br />
-    <%= f.text_field :rss %>
-  </div>
-  <div class="field">
-    ブログの説明<%= f.label :describe %><br />
-    <%= f.text_field :describe %>
-  </div>
-  <div class="field_block">
-    <div class="field_label">IN</div>
-    <%= f.text_field :in, class: "field_wide" %>
-  </div>
-  <div class="field_block">
-    <div class="field_label">OUT</div>
-    <%= f.text_field :out, class: "field_wide" %>
-  </div>
-  <div class="field_block">
-    <div class="field_label">week_in</div>
-    <%= f.text_field :week_in, class: "field_wide" %>
-  </div>
-  <%= f.file_field :image %>
-  <div class="actions">
-    <%= f.submit "ブログを登録する。"%>
-  </div>
-<% end %>
+<h1>Editing blog</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @blog %> |
+<%= link_to 'Back', blogs_path %>
