--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,261 +1,96 @@
 <div id="pan-navi" class="clearfix">
-<ol>
-<li class="arrow"><a href="./index.html">HOME</a></li>
-<li><strong>投資家ブログランキング</strong></li>
-</ol>
+    <ol>
+        <li class="arrow"><a href="./index.html">HOME</a></li>
+        <li><strong>投資家ブログランキング</strong></li>
+    </ol>
 </div>
 <!--//pan-navi-->
 
 <!--content-->
 <div id="content" class="clearfix">
 
-<!--content-box-->
-<div id="content-box" class="clearfix">
+    <!--content-box-->
+    <div id="content-box" class="clearfix">
 
-<!--main-->
-<article id="main" class="clearfix">
+        <!--main-->
+        <article id="main" class="clearfix">
 
-<section class="blog-rank">
+            <section class="blog-rank">
 
-<div class="title-bar">
-<h1><img src="./img/title-bar-blog-rank-investor.png" alt="投資家ブログランキング" /></h1>
-</div>
+                <div class="title-bar">
+                    <h1><img src="./img/title-bar-blog-rank-investor.png" alt="投資家ブログランキング" /></h1>
+                </div>
 
-<table>
-<thead>
-<tr>
-<th class="t-width-100">順位</th>
-<th>ブログ名/最新記事</th>
-<th class="t-width-100">Pt</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="rank">1位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">2位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">3位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">4位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">5位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">6位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">7位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">8位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">9位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">10位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">11位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">12位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">13位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">14位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-<tr>
-<td class="rank">15位</td>
-<td>
-<dl>
-<dt><a href="" target="_blank">バランス投資顧問の株式情報</a></dt>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-<dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
-</dl>
-</td>
-<td>42157</td>
-</tr>
-</tbody>
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="t-width-100">順位</th>
+                            <th>ブログ名/最新記事</th>
+                            <th class="t-width-100">Pt</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <% @blogs.each do |blog| %>
+                                <td class="rank">1位</td>
+                                <td>
+                                    <dl>
+                                        <dt><%= link_to blog.title, blog.url %></dt>
+                                        <dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
+                                        <dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
+                                        <dd><span>2013/06/20 16:05</span><a href="" target="_blank">大引け概況</a></dd>
+                                    </dl>
+                                </td>
+                                <td>42157</td>
+                            <% end %>
+                        </tr>
 
-</table>
+                    </tbody>
 
-<ul class="pn-navi clearfix">
-<li><a href="./blog-rank-investor.html">&lt;&lt;前へ</a></li>
-<li class="current"><span>1</span></li>
-<li class="number"><a href="./blog-rank-investor.html">2</a></li>
-<li class="number"><a href="./blog-rank-investor.html">3</a></li>
-<li class="number"><a href="./blog-rank-investor.html">4</a></li>
-<li class="number"><a href="./blog-rank-investor.html">5</a></li>
-<li class="number"><a href="./blog-rank-investor.html">6</a></li>
-<li class="number"><a href="./blog-rank-investor.html">7</a></li>
-<li class="number"><a href="./blog-rank-investor.html">8</a></li>
-<li class="number"><a href="./blog-rank-investor.html">9</a></li>
-<li><a href=./blog-rank-investor.html"">次へ&gt;&gt;</a></li>
-</ul>
+                </table>
 
-</section>
+                <ul class="pn-navi clearfix">
+                    <li><a href="./blog-rank-investor.html">&lt;&lt;前へ</a></li>
+                    <li class="current"><span>1</span></li>
+                    <li class="number"><a href="./blog-rank-investor.html">2</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">3</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">4</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">5</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">6</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">7</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">8</a></li>
+                    <li class="number"><a href="./blog-rank-investor.html">9</a></li>
+                    <li><a href=./blog-rank-investor.html"">次へ&gt;&gt;</a></li>
+                </ul>
 
-<section>
-<div class="form-rank">
-<h2>投資家ブログランキングの参加</h2>
-<div class="clearfix">
-<p>当サイトへのブログランキングは、まずリンクをサイトのTOPページに貼って頂き下記のフォームよりURLを入力することで参加が完了致します。</p>
+            </section>
 
-<h3>リンク方法</h3>
-<dl class="link-method clearfix">
-<dt class="text-link">テキストリンク</dt>
-<dd><input type="text" name="" value="&lt;a href=&quot;http://株価予想.jpn.ocm/&quot; target=&quot;_blank&quot;&gt;株価予想ナビ&lt;/a&gt;" /></dd>
-<dt class="image-link">イメージリンク</dt>
-<dd><input type="text" name="" value="&lt;a href=&quot;http://株価予想.jpn.ocm/&quot; target=&quot;_blank&quot;&gt;&lt;img src=&quot;画像URL&quot; /&gt;&lt;/a&gt;" /></dd>
-</dl>
+            <section>
+                <div class="form-rank">
+                    <h2>投資家ブログランキングの参加</h2>
+                    <div class="clearfix">
+                        <p>当サイトへのブログランキングは、まずリンクをサイトのTOPページに貼って頂き下記のフォームよりURLを入力することで参加が完了致します。</p>
 
-<form action="">
-<h3>リンク反映方法</h3>
-<p>リンクの設置が完了致しましたら、お手数でございますが下記のフォームより当サイトのURLを入力してリンクの設置報告を宜しくお願い致します。</p>
-<dl class="link-reflection clearfix">
-<dt><label for="form-rank-url">URL</label></dt>
-<dd><input type="text" name="" id="form-rank-url" /></dd>
-<dd><input type="image" src="./img/button-report.png" value="報告する" alt="報告する" onMouseOver="this.src='./img/button-report-on.png'" onMouseOut="this.src='./img/button-report.png'" /></dd>
-</dl>
-</form>
+                        <h3>リンク方法</h3>
+                        <dl class="link-method clearfix">
+                            <dt class="text-link">テキストリンク</dt>
+                            <dd><input type="text" name="" value="&lt;a href=&quot;http://株価予想.jpn.ocm/&quot; target=&quot;_blank&quot;&gt;株価予想ナビ&lt;/a&gt;" /></dd>
+                            <dt class="image-link">イメージリンク</dt>
+                            <dd><input type="text" name="" value="&lt;a href=&quot;http://株価予想.jpn.ocm/&quot; target=&quot;_blank&quot;&gt;&lt;img src=&quot;画像URL&quot; /&gt;&lt;/a&gt;" /></dd>
+                        </dl>
 
-<p>※リンク設置後、下記ツールで『OK』がでればリンク設置に関して問題ありません。</p>
-</div>
-</section>
+                        <form action="">
+                            <h3>リンク反映方法</h3>
+                            <p>リンクの設置が完了致しましたら、お手数でございますが下記のフォームより当サイトのURLを入力してリンクの設置報告を宜しくお願い致します。</p>
+                            <dl class="link-reflection clearfix">
+                                <dt><label for="form-rank-url">URL</label></dt>
+                                <dd><input type="text" name="" id="form-rank-url" /></dd>
+                                <dd><input type="image" src="./img/button-report.png" value="報告する" alt="報告する" onMouseOver="this.src='./img/button-report-on.png'" onMouseOut="this.src='./img/button-report.png'" /></dd>
+                            </dl>
+                        </form>
 
-</article>
+                        <p>※リンク設置後、下記ツールで『OK』がでればリンク設置に関して問題ありません。</p>
+                    </div>
+                </section>
+
+            </article>
