--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer id="footer" class="clearfix">
 	<ul class="clearfix">
-		<li><a href="./index.html">HOME</a></li>
-		<li><a href="./contact.html">お問合わせ</a></li>
-		<li><a href="./kiyaku.html">利用規約</a></li>
-		<li><a href="./about.html">運営者情報</a></li>
-		<li><a href="./menseki.html">免責事項</a></li>
-		<li><a href="./sitemap.html">サイトマップ</a></li>
+		<li><%= link_to "HOME", root_path %></li>
+		<li><%= link_to "お問合わせ", page_inquiry_path %></li>
+		<li><%= link_to "利用規約", page_kiyaku_path %></li>
+		<li><%= link_to "運営者情報", page_about_path %></li>
+		<li><%= link_to "免責事項", page_menseki_path %></li>
+		<li><%= link_to "サイトマップ", page_sitemap_path %><a href="./sitemap.html"></a></li>
 	</ul>
 	<div>
 		<p>Copyright(c)2013 株価予想NAVI ALL Rights Reserved.</p>
