--- a/app/views/toushikomon_boards/index.html.erb
+++ b/app/views/toushikomon_boards/index.html.erb
@@ -1,200 +1,52 @@
 <div id="pan-navi" class="clearfix">
-<ol>
-<li class="arrow"><a href="./index.html">HOME</a></li>
-<li class="arrow"><a href="./toushikomon-list.html">投資顧問一覧</a></li>
-<li><strong>投資顧問口コミ</strong></li>
-</ol>
+	<ol>
+		<li class="arrow"><a href="./index.html">HOME</a></li>
+		<li class="arrow"><a href="./toushikomon-list.html">投資顧問一覧</a></li>
+		<li><strong>投資顧問口コミ</strong></li>
+	</ol>
 </div>
 <!--//pan-navi-->
 
 <!--content-->
 <div id="content" class="clearfix">
 
-<!--content-box-->
-<div id="content-box" class="clearfix">
+	<!--content-box-->
+	<div id="content-box" class="clearfix">
 
-<!--main-->
-<article id="main" class="clearfix">
+		<!--main-->
+		<article id="main" class="clearfix">
 
-<div class="title-bar">
-<h1><img src="./img/title-bar-toushikomon-review.png" alt="投資顧問口コミ" /></h1>
-</div>
+			<div class="title-bar">
+				<h1><img src="./img/title-bar-toushikomon-review.png" alt="投資顧問口コミ" /></h1>
+			</div>
 
-<ul class="toushikomon-review-list-box">
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-<li class="toushikomon-review-list clearfix">
-<dl class="clearfix">
-<dt><a href="toushikomon.html">アイリンクインベストメント</a>の口コミ</dt>
-<dd>名無しさん</dd>
-<dd>2013/06/18(金) 18:08</dd>
-</dl>
-<p>アイリンクインベストはなかなか使える</p>
-</li>
-</ul>
+			<ul class="toushikomon-review-list-box">
 
-<ul class="pn-navi clearfix">
-<li><a href="./toushikomon-review.html">&lt;&lt;前へ</a></li>
-<li class="current"><span>1</span></li>
-<li class="number"><a href="./toushikomon-review.html">2</a></li>
-<li class="number"><a href="./toushikomon-review.html">3</a></li>
-<li class="number"><a href="./toushikomon-review.html">4</a></li>
-<li class="number"><a href="./toushikomon-review.html">5</a></li>
-<li class="number"><a href="./toushikomon-review.html">6</a></li>
-<li class="number"><a href="./toushikomon-review.html">7</a></li>
-<li class="number"><a href="./toushikomon-review.html">8</a></li>
-<li class="number"><a href="./toushikomon-review.html">9</a></li>
-<li><a href="./toushikomon-review.html">次へ&gt;&gt;</a></li>
-</ul>
+				
+				<% Comment.where("consultant_id IS NOT ?", nil).each do |comment| %>
+					<li class="toushikomon-review-list clearfix">
+						<dl class="clearfix">
+							<dt><%= link_to comment.consultant.title, consultant_path(comment.consultant) %>の口コミ</dt>
+							<dt><%= comment.sender %></dt>
+							<dd><%= complete_time(comment.created_at) %></dd>
+						</dl>
+						<p><%= comment.contents %></p>
+					</li>
+				<% end %>
+			</ul>
 
-</article>
+			<ul class="pn-navi clearfix">
+				<li><a href="./toushikomon-review.html">&lt;&lt;前へ</a></li>
+				<li class="current"><span>1</span></li>
+				<li class="number"><a href="./toushikomon-review.html">2</a></li>
+				<li class="number"><a href="./toushikomon-review.html">3</a></li>
+				<li class="number"><a href="./toushikomon-review.html">4</a></li>
+				<li class="number"><a href="./toushikomon-review.html">5</a></li>
+				<li class="number"><a href="./toushikomon-review.html">6</a></li>
+				<li class="number"><a href="./toushikomon-review.html">7</a></li>
+				<li class="number"><a href="./toushikomon-review.html">8</a></li>
+				<li class="number"><a href="./toushikomon-review.html">9</a></li>
+				<li><a href="./toushikomon-review.html">次へ&gt;&gt;</a></li>
+			</ul>
+
+		</article>
