--- a/app/views/stocks/search.html.erb
+++ b/app/views/stocks/search.html.erb
@@ -121,6 +121,20 @@
 
 				</table>
 			</div>
-			<%= will_paginate(@stocks, :prev_label=>'&#171;前', :next_label=>'次&#187;') %>
+
+			<ul class="pn-navi clearfix">
+				<%= will_paginate @stocks %>
+				<li><a href="">&lt;&lt;前へ</a></li>
+				<li class="current"><span>1</span></li>
+				<li class="number"><a href="">2</a></li>
+				<li class="number"><a href="">3</a></li>
+				<li class="number"><a href="">4</a></li>
+				<li class="number"><a href="">5</a></li>
+				<li class="number"><a href="">6</a></li>
+				<li class="number"><a href="">7</a></li>
+				<li class="number"><a href="">8</a></li>
+				<li class="number"><a href="">9</a></li>
+				<li><a href="">次へ&gt;&gt;</a></li>
+			</ul>
 
 		</section>
